# airbnb_clone

./: pyproject.toml
bookings/: admin.py  models.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  untitled  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: settings.py  urls.py
direct_messages/: admin.py  apps.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: admin.py  models.py  views.py
experiences/migrations/: 0001_initial.py  0002_alter_perk_details_alter_perk_explanation.py  0003_experience_category.py  0004_alter_experience_category_alter_experience_host_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_rename_price_per_night_house_price.py  0003_rename_price_house_price_per_night.py  0004_house_pets_allowed.py  0005_remove_house_pets_allowed.py  0006_house_pets_allowed.py  0007_alter_house_pets_allowed.py  0008_alter_house_price_per_night.py
medias/: admin.py  models.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  untitled  views.py
users/: admin.py  models.py  serializers.py
wishlists/: admin.py  models.py
(+9 files in other folders)
