[tool.poetry]
name = "airbnb-clone-backend"
version = "0.1.0"
description = ""
authors = ["bingba2022 <bingbakim@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_clone_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.2"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
